--- a/blog/2021-08-01-mdx-blog-post.mdx
+++ b/blog/2021-08-01-mdx-blog-post.mdx
@@ -1,24 +1,54 @@
 ---
 slug: mdx-blog-post
-title: MDX Blog Post
-authors: [slorber]
-tags: [docusaurus]
+title: Transitioning Spinach from Personal to Community Project
+authors: [turboorange]
+tags: [spinachlang, quantum-computing, open-source]
 ---
 
-Blog posts support [Docusaurus Markdown features](https://docusaurus.io/docs/markdown-features), such as [MDX](https://mdxjs.com/).
+# 🚀 Transition from a Personal to a Community Project
 
-:::tip
+Spinach began as a personal experiment, but over time I realized its potential to grow into a true **community-driven project**.  
+To make this happen, I’d love your support.
 
-Use the power of React to create interactive blog posts.
+---
 
-:::
+## 🙌 How You Can Contribute
 
-{/* truncate */}
+<Tabs>
+  <TabItem value="docs" label="📚 Documentation">
+    Help improve or expand the documentation on this site. Clear docs are the backbone of any strong community.
+  </TabItem>
+  <TabItem value="lang" label="🛠️ Core Language">
+    Contribute directly to the Spinach language. Every line of code brings us closer to a robust quantum-focused tool.
+  </TabItem>
+  <TabItem value="ideas" label="💡 Ideas & Suggestions">
+    Share your thoughts on new features, improvements, or workflows. Sometimes the best insights come from outside perspectives.
+  </TabItem>
+  <TabItem value="community" label="💬 Community">
+    Join the conversation on [Discord](https://discord.gg/WypGPaDc7z). Whether you want to contribute, learn, or just hang out—you're welcome.
+  </TabItem>
+</Tabs>
 
-For example, use JSX to create an interactive button:
+---
 
-```js
-<button onClick={() => alert('button clicked!')}>Click me!</button>
-```
+## 🔬 A Call for Quantum Computing Feedback
 
-<button onClick={() => alert('button clicked!')}>Click me!</button>
+<Details>
+  <summary>👩‍🔬 Why Quantum Feedback Matters</summary>
+
+Spinach isn’t just another programming language—it’s designed with **quantum computing in mind**.  
+If you’ve worked with quantum computers before, your insights can help ensure that Spinach:
+
+- Feels natural for quantum workflows  
+- Avoids common pitfalls of "shoehorning" quantum into classical paradigms  
+- Builds concepts (like pipelines) that match real-world usage  
+
+</Details>
+
+---
+
+<Callout type="info" title="Every Contribution Counts">
+  Whether you’ve got 5 minutes or 5 hours, your help makes a difference.  
+  Together, we can make Spinach something far greater than a personal project. 🌱
+</Callout>
+
