--- a/blog/2021-08-01-mdx-blog-post.mdx
+++ b/blog/2021-08-01-mdx-blog-post.mdx
@@ -1,5 +1,5 @@
 ---
-slug: mdx-blog-post
+slug: Spinach lang contributions
 title: Transitioning Spinach from Personal to Community Project
 authors: [turboorange]
 tags: [spinachlang, quantum-computing, open-source]
