--- a/blog/2025-09-03-spinach-lang-contribution.mdx
+++ b/blog/2025-09-03-spinach-lang-contribution.mdx
@@ -1,14 +1,20 @@
 ---
-slug: Spinach lang contributions
+slug: mdx-blog-post
 title: Transitioning Spinach from Personal to Community Project
 authors: [turboorange]
 tags: [spinachlang, quantum-computing, open-source]
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+import Details from '@theme/Details';
+
 # 🚀 Transition from a Personal to a Community Project
 
 Spinach began as a personal experiment, but over time I realized its potential to grow into a true **community-driven project**.  
 To make this happen, I’d love your support.
+
+<!-- truncate -->
 
 ---
 
@@ -33,8 +39,7 @@ To make this happen, I’d love your support.
 
 ## 🔬 A Call for Quantum Computing Feedback
 
-<Details>
-  <summary>👩‍🔬 Why Quantum Feedback Matters</summary>
+<Details summary="👩‍🔬 Why Quantum Feedback Matters">
 
 Spinach isn’t just another programming language—it’s designed with **quantum computing in mind**.  
 If you’ve worked with quantum computers before, your insights can help ensure that Spinach:
@@ -47,8 +52,8 @@ If you’ve worked with quantum computers before, your insights can help ensure 
 
 ---
 
-<Callout type="info" title="Every Contribution Counts">
-  Whether you’ve got 5 minutes or 5 hours, your help makes a difference.  
-  Together, we can make Spinach something far greater than a personal project. 🌱
-</Callout>
+:::info Every Contribution Counts
+Whether you’ve got 5 minutes or 5 hours, your help makes a difference.  
+Together, we can make Spinach something far greater than a personal project. 🌱
+:::
 
