--- a/blog/2025-09-03-spinach-lang-contribution.mdx
+++ b/blog/2025-09-03-spinach-lang-contribution.mdx
@@ -1,5 +1,5 @@
 ---
-slug: mdx-blog-post
+slug: Spinach lang personal to community-driven Transitioning
 title: Transitioning Spinach from Personal to Community Project
 authors: [turboorange]
 tags: [spinachlang, quantum-computing, open-source]
