add how does it work documentation

--- a/docs/how-does-it-work/index.mdx
+++ b/docs/how-does-it-work/index.mdx
@@ -13,3 +13,6 @@ This is a description of the compiler's flow.
 - Both transformers are used to create the final tket circuit.
 
 A tket circuit is extreamely versatile. From there we can compile to anything or even start simulations.
+
+# grammar
+Spinach is a LALR(1) grammar.
